# Hedge-fund-ai

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_DIAGNOSTICS.md  GEMINI_QUOTA_GUIDE.md  POST_DEPLOYMENT_GUIDE.md  PROJECT_REVIEW.md  README.md  TROUBLESHOOTING.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
app/: main.py
app/agents/: document_agent.py  financial_data_agent.py  news_agent.py
app/agents/tools/: technical_analysis.py
app/api/: routes.py
app/cache/: semantic_cache.py
app/core/: concurrency.py  config.py  logging.py  telemetry.py
app/db/: feedback.py
app/graph/: nodes.py  workflow.py
app/memory/: store.py
app/orchestrator/: compressor.py  reviewer.py  runner.py
app/rag/: pipeline.py
app/schemas/: models.py
client/: sse_client.js
files (1)/: pipeline.py  pyproject.toml
frontend/: SETUP.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/analyse/: route.ts
frontend/app/api/feedback/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/diagnostics/: page.tsx
frontend/components/agents/: AgentTimeline.tsx
frontend/components/charts/: TechnicalCharts.tsx
frontend/components/dashboard/: ConfidenceScoring.tsx  FeedbackPanel.tsx  InsiderTracker.tsx  SentimentHeatmap.tsx  StockSearch.tsx  ThesisCard.tsx
frontend/components/ui/: container-scroll-animation.tsx  container-scroll-animation.tsx.bak
frontend/hooks/: useAnalysisStream.ts
frontend/lib/: utils.ts
frontend/types/: index.ts
infra/: Dockerfile  docker-compose.yml  fly.toml  render.yaml
scripts/: seed_demo.py  setup.sh
tests/: test_evaluation.py  test_integration.py  test_memory.py  test_technical.py
